--- a/index.html
+++ b/index.html
@@ -3,108 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style/musica.css">
     <title>Grandes nonmes da Música</title>
-    <style>
-        * {
-            text-decoration: none;
-        }
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            background-color: #3d3d3d;
-            color: rgba(49, 105, 49, 0.933);
-            margin: 10px;
-            padding: 10px;
-        }
-
-        header {
-            background-color: darkgreen;
-            color: #ffffff;
-            text-align: center;
-            padding: 20px;
-            border: 1px solid #444;
-            border-radius: 1.2em;
-            margin-bottom: 30px;
-        }
-
-        header > h1 {
-            text-align: center;
-        }
-
-        h1, p#m {
-            font-size: 20px;
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: normal;
-            color: #fff;
-            text-align: justify;
-        }
-
-        h2 {
-            background-color: rgba(49, 105, 49, 0.933);
-            color: aliceblue;
-            font-size: 20px;
-            font-family: 'Times New Roman', Times, serif;
-        }
-
-        p {
-            font-size: 15px;
-            color: darkslategrey;
-        }
-
-        p#m {
-            text-align: center;
-            border: 1px solid #ffffff05;
-            border-radius: 0.5em;
-            box-shadow: 9px 1px 1px 9px rgba(255, 255, 255, 0.63);
-        }
-
-        div.musica {
-            background-color: rgba(0, 0, 0, 0.164);
-            text-align: center;
-            border: 12px double black;
-            border-radius: 50em;
-            margin: auto;
-        }
-
-        div.musica > ul {
-            list-style: none;
-            padding: 10px;
-            margin: auto;
-        }
-
-        div.musica > ul > li {
-            margin: 10px;
-        }
-
-        main {
-            background-color: aliceblue;
-            padding: 12px;
-            border: 2px solid yellow;
-            border-radius: 0.5em;
-            margin-bottom: 30px;
-            box-shadow: 10px 0 10px 0 rgba(240, 239, 239, 0.24);
-            margin: auto;
-        }
-
-        main > h2, p {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 19px;
-            font-weight: bold;
-        }
-
-        main strong i {
-            background-color: rgb(0, 89, 255);
-            color: white;
-            border: 1px solid #444;
-            border-radius: 0.3em;
-        }
-
-        footer, p#m {
-            background-color: darkgreen;
-            color: white;
-            margin: 10px;
-            padding: 12px;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -121,7 +21,7 @@
             <p><strong><i>Qualidade de Vida:</i></strong> Seja cantando, dançando ou apenas apreciando, a música é uma fonte poderosa de lazer e satisfação pessoal.</p>
         <h2>2. Desenvolvimento Cognitivo e Aprendizagem</h2>
             <p><strong><i>Estímulo Cerebral:</i></strong> A música ativa diversas áreas do cérebro, estimulando a cognição.</p>
-            <p><strong><i>emória e Concentração:</i></strong>M Melhora a memória (a memória musical é uma das últimas a se apagar em doenças neurodegenerativas como o Alzheimer), a concentração e o raciocínio. A música instrumental, em particular, pode ser uma aliada para o foco em tarefas de estudo ou trabalho.</p>
+            <p><strong><i>Memória e Concentração:</i></strong>M Melhora a memória (a memória musical é uma das últimas a se apagar em doenças neurodegenerativas como o Alzheimer), a concentração e o raciocínio. A música instrumental, em particular, pode ser uma aliada para o foco em tarefas de estudo ou trabalho.</p>
             <p><strong><i>Desenvolvimento Infantil:</i></strong> A prática musical regular, como aprender um instrumento, pode levar a melhorias cognitivas significativas e auxiliar no desenvolvimento de habilidades como linguagem, coordenação motora e raciocínio lógico.</p>
         <h2>3. Conexão Social e Expressão</h2>
             <p><strong><i>Identidade e Expressão Individual:</i></strong> A música é uma forma de arte que permite a cada um expressar seus sentimentos mais profundos e desenvolver sua identidade através do gosto e da prática musical.</p>
