--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <p>
             <div class="musica">
                 <ul>
-                    <li><a href=""><i>Chinha Gonzaga</i></a></li>
-                    <li><a href=""><i>Frédéric Chopin</i></a></li>
-                    <li><a href=""><i>Heitor Villa-Lobos</i></a></li>
-                    <li><a href=""><i>Johann Sebastian Bach</i></a></li>
-                    <li><a href=""><i>Ludwig van Beethoven</i></a></li>
-                    <li><a href=""><i>Wolfgang Amadeus Mozart</i></a></li>
+                    <li><a href="paginas/chiquinha-gonzaga.html" target="_self" rel="next"><i>Chinha Gonzaga</i></a></li>
+                    <li><a href="paginas/federic-chopin.html" target="_self" rel="next"><i>Frédéric Chopin</i></a></li>
+                    <li><a href="paginas/heitor-vila-lobos.html" target="_self" rel="next"><i>Heitor Villa-Lobos</i></a></li>
+                    <li><a href="paginas/johann-sebastian-bach.html" target="_self" rel="next"><i>Johann Sebastian Bach</i></a></li>
+                    <li><a href="paginas/ludwing-van-beethoven.html" target="_self" rel="next"><i>Ludwig van Beethoven</i></a></li>
+                    <li><a href="paginas/wolfgang-amadeus-mazart.html" target="_self" rel="next"><i>Wolfgang Amadeus Mozart</i></a></li>
                 </ul>
             </div>
             
