--- a/paginas/chiquinha-gonzaga.html
+++ b/paginas/chiquinha-gonzaga.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chiquinha Gonzaga</title>
+    <title>Primeira Maestrina - Chiquinha Gonzaga</title>
     <style>
         * {
             text-decoration: none;
