--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="musica">
                 <ul>
                     <li><a href="paginas/chiquinha-gonzaga.html" target="_self" rel="next"><i>Chinha Gonzaga</i></a></li>
+                    <li><a href="paginas/maestro-joão-carlos-martins.html" target="_self" rel="next"><i>Maestro João Carlos Martins</i></a></li>
                     <li><a href="paginas/federic-chopin.html" target="_self" rel="next"><i>Frédéric Chopin</i></a></li>
                     <li><a href="paginas/heitor-vila-lobos.html" target="_self" rel="next"><i>Heitor Villa-Lobos</i></a></li>
                     <li><a href="paginas/johann-sebastian-bach.html" target="_self" rel="next"><i>Johann Sebastian Bach</i></a></li>
@@ -41,7 +42,6 @@
                     <li><a href="paginas/wolfgang-amadeus-mazart.html" target="_self" rel="next"><i>Wolfgang Amadeus Mozart</i></a></li>
                 </ul>
             </div>
-            
         </p> <hr>
     </main>
     <footer>
