--- a/paginas/maestro-joão-carlos-martins.html
+++ b/paginas/maestro-joão-carlos-martins.html
@@ -8,6 +8,43 @@
         * {
             text-decoration: none;
             list-style: none;
+            text-align: justify;
+        }
+
+        body {
+            background-color: #444;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 1.2em;
+            color: white;
+        }
+
+        header {
+            background-color: #fff;
+            color: #333;
+        }
+
+        header > h1 {
+            background-color: rgb(7, 89, 196);
+            text-align: center;
+            color: white;
+        }
+
+        header > p {
+            background-color: rgb(3, 255, 255);
+            text-align: justify;
+        }
+
+        footer {
+            font-size: 25px;
+            font-weight: bolder;
+            background: rgb(7, 89, 196);
+            text-align: center;
+        }
+
+        footer > p {
+            background-color: rgb(7, 89, 196);
+            color: white;
+            text-align: center;
         }
     </style>
 </head>
@@ -89,11 +126,11 @@
                 Embora Bach seja sua marca registrada, João Carlos Martins também interpretou obras de outros grandes compositores. 
                 Ao longo de sua carreira, ele incluiu em seus concertos peças de mestres como:
             </p>
-                <ol>
-                    <li><strong><i><a href="#">Beethoven</a></i></strong></li>
-                    <li><strong><i><a href="#">Chopin</a></i></strong></li>
-                    <li><strong><i><a href="#">Mozart</a></i></strong></li>
-                </ol>
+                <div class="Joâo-Carlos-Martins">
+                    <a href="Beethonven, Mozart e Chopin/beethoven.html" target="_self" rel="next"><strong><i>Beethoven</i></strong></a>
+                    <a href="Beethonven, Mozart e Chopin/mozart.html" target="_self" rel="next"><strong><i>Chopin</i></strong></a>
+                    <a href="Beethonven, Mozart e Chopin/chopin.html" target="_self" rel="next"><strong><i>Mozart</i></strong></a>
+                </div>
             <p>
                 Como maestro, ele também expandiu seu repertório, regendo obras de compositores brasileiros, incluindo composições de <strong><i>Heitor Villa-Lobos</i></strong>.
             </p>
@@ -125,7 +162,7 @@
                 Johann Sebastian Bach (J.S. Bach), um projeto colossal que o estabeleceu como um dos maiores bachianos da história.
             </p>
         <h2>Obra de J.S. Bach Interpretada,Notas</h2>
-            <div>
+            <div class="Joâo-Carlos-Martins">
                 <ul>
                     <p><li><strong><i>O Cravo Bem Temperado (BWV 846-893),Livro I e Livro II. Coleção de 48 Prelúdios e Fugas em todas as tonalidades.</i></strong></li></p>
                     <p><li><strong><i>As Variações Goldberg (BWV 988),Aclamada obra com um tema e 30 variações.</i></strong></li></p>
@@ -145,7 +182,7 @@
             </p>
         <div>
             <h4>Obra / Arranjo Notável,Gênero / Contexto</h4>
-                <div>
+                <div class="Joâo-Carlos-Martins">
                     <ul>
                         <li><strong><i>"""Céu de Santo Amaro""","Arranjo para orquestra e voz, baseado no ""Largo"" do Concerto n.º 5 em Fá Menor de Bach. Gravado com artistas populares."</i></strong></li>
                         <li><strong><i>"""Jesus Alegria dos Homens""","Arranjo de coral de Bach (BWV 147), frequentemente executado em concertos e gravações."</i></strong></li>
@@ -159,15 +196,17 @@
                     </ul>
                 </div>
         <h3>III. Álbuns Notáveis (Como Pianista e Regente)</h3>
-            <p>Esta é uma amostra dos álbuns que ele lançou, que contêm as obras interpretadas por ele:</p>
-            <p>The Complete Keyboard Works of J. S. Bach: A coleção completa de seus 15 volumes gravados.</p>
-            <ul>
-                <p><li><strong><i>Bach - O Cravo Bem Temperado, Vol. 1 e 2</i></strong></li></p>
-                <p><li><strong><i>Bach - Brandenburg Concertos (Complete)</i></strong></li></p>
-                <p><li><strong><i>J. S. Bach/F. Chopin: The Preludes: Álbum que une as duas grandes influências de sua vida.</i></strong></li></p>
-                <p><li><strong><i>Só Para Mão Esquerda / For the Left Hand (2002): Álbum especial gravado após suas lesões na mão direita.</i></strong></li></p>
-                <p><li><strong><i>João, o Maestro - Trilha Sonora Original do Filme: Coletânea de suas interpretações que compõem a trilha de sua cinebiografia.</i></strong></li></p>
-            </ul>
+                <p>Esta é uma amostra dos álbuns que ele lançou, que contêm as obras interpretadas por ele:</p>
+                <p>The Complete Keyboard Works of J. S. Bach: A coleção completa de seus 15 volumes gravados.</p>
+            <div class="Joâo-Carlos-Martins">
+                <ul>
+                    <p><li><strong><i>Bach - O Cravo Bem Temperado, Vol. 1 e 2</i></strong></li></p>
+                    <p><li><strong><i>Bach - Brandenburg Concertos (Complete)</i></strong></li></p>
+                    <p><li><strong><i>J. S. Bach/F. Chopin: The Preludes: Álbum que une as duas grandes influências de sua vida.</i></strong></li></p>
+                    <p><li><strong><i>Só Para Mão Esquerda / For the Left Hand (2002): Álbum especial gravado após suas lesões na mão direita.</i></strong></li></p>
+                    <p><li><strong><i>João, o Maestro - Trilha Sonora Original do Filme: Coletânea de suas interpretações que compõem a trilha de sua cinebiografia.</i></strong></li></p>
+                </ul>
+            </div>
     </main>
     <footer>
         <p>Texto gerado por IA.</p>
