--- a/paginas/maestro-joão-carlos-martins.html
+++ b/paginas/maestro-joão-carlos-martins.html
@@ -85,6 +85,23 @@
             padding: 11px;
         }
 
+        main > div.Joâo-Carlos-MartinsII {
+            border: 2px solid black;
+            border-radius: 2em;
+            box-shadow: 1px 1px 1px black;
+            padding: 10px;
+            text-align: center;
+            text-justify: unset;
+        }
+
+        main > div > p#beethoven {
+            border: 2px solid rgb(28, 28, 117);
+            border-radius: 0 0.2em 0 0.2em;
+            box-shadow: 2px 0px 0px 2px rgba(37, 93, 248, 0.384);
+            text-align: center;
+            font-weight: bold;
+        }
+
         main > h3 {
             background-color: rgb(82, 147, 233);
             color: rgb(0, 0, 0);
@@ -193,9 +210,15 @@
                 Ao longo de sua carreira, ele incluiu em seus concertos peças de mestres como:
             </p>
                 <div class="Joâo-Carlos-MartinsII">
-                    <a href="Beethonven, Mozart e Chopin/beethoven.html" target="_self" rel="next"><strong><i>Beethoven</i></strong></a>
-                    <a href="Beethonven, Mozart e Chopin/mozart.html" target="_self" rel="next"><strong><i>Chopin</i></strong></a>
-                    <a href="Beethonven, Mozart e Chopin/chopin.html" target="_self" rel="next"><strong><i>Mozart</i></strong></a>
+                    <p id="beethoven">
+                      <a href="Beethonven, Mozart e Chopin/beethoven.html" target="_self" rel="next"><strong><i>Beethoven</i></strong></a>
+                    </p>
+                    <p id="mozart">
+                      <a href="Beethonven, Mozart e Chopin/mozart.html" target="_self" rel="next"><strong><i>Chopin</i></strong></a>
+                    </p>
+                    <p id="chopin">
+                        <a href="Beethonven, Mozart e Chopin/chopin.html" target="_self" rel="next"><strong><i>Mozart</i></strong></a>
+                    </p>
                 </div>
             <p>
                 Como maestro, ele também expandiu seu repertório, regendo obras de compositores brasileiros, incluindo composições de <strong><i>Heitor Villa-Lobos</i></strong>.
