--- a/paginas/maestro-joão-carlos-martins.html
+++ b/paginas/maestro-joão-carlos-martins.html
@@ -100,11 +100,56 @@
             box-shadow: 2px 0px 0px 2px rgba(37, 93, 248, 0.384);
             text-align: center;
             font-weight: bold;
+            padding: 2px 3px 3px 2px;
+            background-color: #ccc;
+        }
+
+        main >div > p#mozart {
+            border: 2px solid rgb(28, 28, 117);
+            border-radius: 0 0.2em 0 0.2em;
+            box-shadow: 2px 0px 0px 2px rgba(37, 93, 248, 0.384);
+            text-align: center;
+            font-weight: bold;
+            padding: 2px 3px 3px 2px;
+            background-color: #ccc;
+        }
+
+        main > div > p#chopin {
+            border: 2px solid rgb(28, 28, 117);
+            border-radius: 0 0.2em 0 0.2em;
+            box-shadow: 2px 0px 0px 2px rgba(37, 93, 248, 0.384);
+            text-align: center;
+            font-weight: bold;
+            padding: 2px 3px 3px 2px;
+            background-color: #ccc;
+        }
+
+        main > div > .Joâo-Carlos-MartinsII, p > a:hover {
+            color: #ff0000;
+            border: 1px solid rgb(233, 79, 79);
+            border-radius: 0.1em;
+            transition-duration: 0.01ms;
+            background-color: #fff;
         }
 
         main > h3 {
             background-color: rgb(82, 147, 233);
             color: rgb(0, 0, 0);
+        }
+
+        main > h3, #musica, ul, li {
+            text-align: justify;
+            text-justify: inter-ideograph;
+            padding: 10px;
+            border: 1px double rgb(233, 79, 79);
+            border-radius: 0.3em;
+            box-shadow: 2px 0 0 2px rgba(37, 93, 248, 0.24);
+        }
+
+        p.m {
+            border: 2px dashed rgb(255, 0, 0);
+            border-radius: 0.3em;
+            box-shadow: 2px 0 0 2px rgba(48, 47, 47, 0.171);
         }
 
         footer {
@@ -255,34 +300,32 @@
         
             
         <h3>Obra de J.S. Bach Interpretada,Notas</h3>
-            <div class="Joâo-Carlos-Martins">
-                <ul>
-                    <li><strong><i>O Cravo Bem Temperado (BWV 846-893),Livro I e Livro II. Coleção de 48 Prelúdios e Fugas em todas as tonalidades.</i></strong></li>
-                    <li><strong><i>As Variações Goldberg (BWV 988),Aclamada obra com um tema e 30 variações.</i></strong></li>
-                    <li><strong><i>Invenções a Duas e Três Vozes,Peças didáticas e contrapontísticas.</i></strong></li>
-                    <li><strong><i>As Seis Partitas (Suítes Alemãs),Seis suítes de dança para teclado.</i></strong></li>
-                    <li><strong><i>As Seis Suítes Inglesas,Seis suítes de dança mais extensas.</i></strong></li>
-                    <li><strong><i>As Suítes Francesas,Seis suítes mais curtas e graciosas.</i></strong></li>
-                    <li><strong><i>Concertos para Piano e Orquestra,Incluindo o famoso Concerto para Teclado em Fá Menor (BWV 1056).</i></strong></li>
-                    <li><strong><i>"Tocatas, Fantasias, Prelúdios e Fugas",Outras obras importantes para teclado solo.</i></strong></li>
-                    <li><strong><i>Concertos de Brandenburgo,"Como maestro, ele regeu a obra orquestral completa de Bach."</i></strong></li>
-                </ul>
-            </div>
+            <ul class="musica">
+                <li><strong><i>O Cravo Bem Temperado (BWV 846-893),Livro I e Livro II. Coleção de 48 Prelúdios e Fugas em todas as tonalidades.</i></strong></li>
+                <li><strong><i>As Variações Goldberg (BWV 988),Aclamada obra com um tema e 30 variações.</i></strong></li>
+                <li><strong><i>Invenções a Duas e Três Vozes,Peças didáticas e contrapontísticas.</i></strong></li>
+                <li><strong><i>As Seis Partitas (Suítes Alemãs),Seis suítes de dança para teclado.</i></strong></li>
+                <li><strong><i>As Seis Suítes Inglesas,Seis suítes de dança mais extensas.</i></strong></li>
+                <li><strong><i>As Suítes Francesas,Seis suítes mais curtas e graciosas.</i></strong></li>
+                <li><strong><i>Concertos para Piano e Orquestra,Incluindo o famoso Concerto para Teclado em Fá Menor (BWV 1056).</i></strong></li>
+                <li><strong><i>"Tocatas, Fantasias, Prelúdios e Fugas",Outras obras importantes para teclado solo.</i></strong></li>
+                <li><strong><i>Concertos de Brandenburgo,"Como maestro, ele regeu a obra orquestral completa de Bach."</i></strong></li>
+            </ul>
         <h3>II. Obras Como Compositor e Arranjador</h3>
             <p>
                 Embora tenha se dedicado mais à performance, João Carlos Martins também compôs e, mais frequentemente, 
                 criou arranjos que unem a música clássica à popular, especialmente após se tornar maestro.
             </p>
         <h3>Obra / Arranjo Notável,Gênero / Contexto</h3>
-            <div class="Joâo-Carlos-Martins">
-                <ul>
+            <div>
+                <ul class="musica">
                     <li><strong><i>"""Céu de Santo Amaro""","Arranjo para orquestra e voz, baseado no ""Largo"" do Concerto n.º 5 em Fá Menor de Bach. Gravado com artistas populares."</i></strong></li>
                     <li><strong><i>"""Jesus Alegria dos Homens""","Arranjo de coral de Bach (BWV 147), frequentemente executado em concertos e gravações."</i></strong></li>
-                        <p>
+                        <p class="m">
                             Trilhas Sonoras / Colaborações,"Participação em álbuns e projetos de música popular, como nos CDs Paixões e com artistas como Chitãozinho & Xororó, Daniel Boaventura e Gabriel Sater (na música ""Amor de Índio"")."
                         </p>
                     <li><strong><i>"""Martins-Passion, Die""","Título de um de seus álbuns, que sugere uma montagem ou uma peça de sua autoria."</i></strong></li>
-                        <p>
+                        <p class="m">
                             Música Incidental / Peças de Conjunto,"Martins mencionou que compôs em algumas ocasiões, especialmente em seu trabalho como maestro e diretor artístico da Orquestra Bachiana Filarmônica SESI-SP."
                         </p>
                 </ul>
@@ -292,8 +335,8 @@
                     Esta é uma amostra dos álbuns que ele lançou, que contêm as obras interpretadas por ele: <br>
                     The Complete Keyboard Works of J. S. Bach: A coleção completa de seus 15 volumes gravados.
                 </p>
-            <div class="Joâo-Carlos-Martins">
-                <ul>
+            <div>
+                <ul class="musica">
                     <li><strong><i>Bach - O Cravo Bem Temperado, Vol. 1 e 2</i></strong></li>
                     <li><strong><i>Bach - Brandenburg Concertos (Complete)</i></strong></li>
                     <li><strong><i>J. S. Bach/F. Chopin: The Preludes: Álbum que une as duas grandes influências de sua vida.</i></strong></li>
