--- a/paginas/Beethonven, Mozart e Chopin/beethoven.html
+++ b/paginas/Beethonven, Mozart e Chopin/beethoven.html
@@ -71,6 +71,14 @@
             text-align: center;
             text-justify: inter-ideograph;
         }
+
+        footer > p#legadoI a:hover {
+            background-color: red;
+            color: #fff;
+            border: 1px solid #fff;
+            border: 0.2em 0.1em 0.1em;
+            padding: 11px;
+        }
     </style>
 </head>
 <body>
@@ -111,7 +119,7 @@
             <p id="legado">Faleceu em Viena, em 26 de março de 1827.</p>
     </main>
     <footer>
-        <p id="legadoI">Texto gerado po IA.</p>
+        <p id="legadoI">Texto gerado por <a href="../maestro-joão-carlos-martins.html" target="_self" rel="next"><strong><i>IA</i></strong></a>.</p>
     </footer>
 </body>
 </html>
