--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </p> <hr>
     </main>
     <footer>
-        <p id="m">&copy; 2025 Seu Nome/Empresa. Todos os direitos reservados.</p>
+        <p id="m">&copy;Todos os direitos reservados IA.</p>
     </footer>
 </body>
 </html>
