--- a/paginas/maestro-joão-carlos-martins.html
+++ b/paginas/maestro-joão-carlos-martins.html
@@ -259,10 +259,10 @@
                       <a href="Beethonven, Mozart e Chopin/beethoven.html" target="_self" rel="next"><strong><i>Beethoven</i></strong></a>
                     </p>
                     <p id="mozart">
-                      <a href="Beethonven, Mozart e Chopin/mozart.html" target="_self" rel="next"><strong><i>Chopin</i></strong></a>
+                      <a href="Beethonven, Mozart e Chopin/mozart.html" target="_self" rel="next"><strong><i>Mozart</i></strong></a>
                     </p>
                     <p id="chopin">
-                        <a href="Beethonven, Mozart e Chopin/chopin.html" target="_self" rel="next"><strong><i>Mozart</i></strong></a>
+                        <a href="Beethonven, Mozart e Chopin/chopin.html" target="_self" rel="next"><strong><i>Chopin</i></strong></a>
                     </p>
                 </div>
             <p>
