--- a/paginas/Beethonven, Mozart e Chopin/chopin.html
+++ b/paginas/Beethonven, Mozart e Chopin/chopin.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frédéric Chopin</title>
+</head>
+<body>
     <style>
         * {
             list-style: none;
@@ -23,16 +25,17 @@
             padding: 22px;
             border: 12px solid rgb(255, 255, 255);
             border-radius: 0.1em 0.3em 0.1em 0.3em;
+            max-width: 800px;
         }
 
         section > h1 {
             font-size: 1em;
             text-align: center;
             margin: 1px 1px 1px 1px;
-
+            margin: auto;
         }
 
-        section > p > strong i {
+        section > h1 > strong, p > strong i {
             background-color: antiquewhite;
             border: 1px solid black;
             border-radius: 0.1em 0.3em 0.2em 0.1em;
@@ -48,27 +51,37 @@
 
         div > ul, li#chopin {
             border-radius: 0.1em 0.3em 0.1em 0.3em;
-            
+        }
+
+        div > ul > li#Chopin-I, div > ul > li#Chopin-II i {
+            background-color: white;
+            border: 1px solid #000;
+            border-radius: 0.1em 0.3em 0.2em 0.1em;
+            padding: 2px;
         }
     </style>
 </head>
 <body>
     <section>
         <h1>Frédéric Chopin (1810-1849)</h1>
-            <p>
+            <p id="chopin">
                 <strong><i>Frédéric Chopin (1810-1849)</i></strong> foi um compositor e pianista polonês, naturalizado francês, 
                 sendo um dos maiores expoentes do período Romântico e universalmente aclamado como o "poeta do piano".
             </p>
+
         <div>
-            <ul>
-                <li id="Chopin"<i>Infância e Formação:</i></strong> Nascido perto de Varsóvia, na Polônia, ele demonstrou ser uma criança prodígio no piano. Desde muito jovem, já era aclamado em sua terra natal e, após estudar no Conservatório de Varsóvia, tornou-se um músico tecnicamente brilhante e sensível. A forte identidade polonesa e o folclore de seu país natal foram uma grande influência em sua obra.</li>
-                <li id="Chopin"<i>Vida em Paris:</i></strong> Em 1830, aos 20 anos, ele deixou a Polônia e, após um período de viagem, se estabeleceu em Paris em 1831. A capital francesa era o centro cultural da Europa na época. Em Paris, Chopin fez carreira como pianista, compositor e professor, conquistando a aristocracia e a alta sociedade. Suas composições, embora tecnicamente exigentes, focavam na profundidade do sentimento e na beleza melódica.</li>
-                <li id="Chopin"<i>Obra Musical:</i></strong> Chopin dedicou-se quase que exclusivamente ao piano. Sua obra revolucionou a música para teclado, explorando novas possibilidades expressivas e técnicas. Ele é autor de inúmeros prelúdios, noturnos, valsas, mazurcas, polonaises, baladas, scherzos e sonatas, muitas das quais são pilares do repertório pianístico. Destacam-se obras como o Noturno Op. 9 No. 2 e a Marcha Fúnebre (da Sonata No. 2).</li>
-                <li id="Chopin"<i>Vida Pessoal e Saúde:</i></strong> Ele manteve uma amizade com grandes nomes da música, como Franz Liszt, e teve um notório relacionamento de nove anos com a escritora francesa George Sand. Sua saúde, no entanto, sempre foi frágil, e ele sofreu com a tuberculose por muitos anos.</li>
-                <li id="Chopin"<i>Morte e Legado:</i></strong> Frédéric Chopin faleceu em Paris em 1849, aos 39 anos. A pedido dele, seu coração foi levado de volta à Polônia e está guardado na Igreja da Santa Cruz em Varsóvia, simbolizando seu profundo patriotismo. Sua música permanece admirada e é uma passagem obrigatória no estudo de qualquer pianista.</li>
+            <ul id="Chopin-I">
+                <li id="Chopin-II"><i>Infância e Formação:</i> Nascido perto de Varsóvia, na Polônia, ele demonstrou ser uma criança prodígio no piano. Desde muito jovem, já era aclamado em sua terra natal e, após estudar no Conservatório de Varsóvia, tornou-se um músico tecnicamente brilhante e sensível. A forte identidade polonesa e o folclore de seu país natal foram uma grande influência em sua obra.</p>
+                <li id="Chopin-II"><i>Vida em Paris:</i> Em 1830, aos 20 anos, ele deixou a Polônia e, após um período de viagem, se estabeleceu em Paris em 1831. A capital francesa era o centro cultural da Europa na época. Em Paris, Chopin fez carreira como pianista, compositor e professor, conquistando a aristocracia e a alta sociedade. Suas composições, embora tecnicamente exigentes, focavam na profundidade do sentimento e na beleza melódica.</p>
+                <li id="Chopin-II"><i>Obra Musical:</i> Chopin dedicou-se quase que exclusivamente ao piano. Sua obra revolucionou a música para teclado, explorando novas possibilidades expressivas e técnicas. Ele é autor de inúmeros prelúdios, noturnos, valsas, mazurcas, polonaises, baladas, scherzos e sonatas, muitas das quais são pilares do repertório pianístico. Destacam-se obras como o Noturno Op. 9 No. 2 e a Marcha Fúnebre (da Sonata No. 2).</p>
+                <li id="Chopin-II"><i>Vida Pessoal e Saúde:</i> Ele manteve uma amizade com grandes nomes da música, como Franz Liszt, e teve um notório relacionamento de nove anos com a escritora francesa George Sand. Sua saúde, no entanto, sempre foi frágil, e ele sofreu com a tuberculose por muitos anos.</p>
+                <li id="Chopin-II"><i>Morte e Legado:</i> Frédéric Chopin faleceu em Paris em 1849, aos 39 anos. A pedido dele, seu coração foi levado de volta à Polônia e está guardado na Igreja da Santa Cruz em Varsóvia, simbolizando seu profundo patriotismo. Sua música permanece admirada e é uma passagem obrigatória no estudo de qualquer pianista.</p>
             </ul>
         </div>
-        
+
     </section>
+    <footer>
+        <p>Texto gerado por <a href="../maestro-joão-carlos-martins.html" target="_self" rel="next"><strong><i>IA</i></strong></a>.</p>
+    </footer>
 </body>
 </html>
