--- a/paginas/Beethonven, Mozart e Chopin/chopin.html
+++ b/paginas/Beethonven, Mozart e Chopin/chopin.html
@@ -59,6 +59,18 @@
             border-radius: 0.1em 0.3em 0.2em 0.1em;
             padding: 2px;
         }
+
+        footer {
+            text-align: center;
+        }
+
+        a:hover {
+            color: rgb(41, 5, 247);
+            border: 2px solid #cccccc;
+            border-radius: 0.1em 0.3em 0.2em 0.1em;
+            padding: 10px;
+            transition-duration: 2ms;
+        }
     </style>
 </head>
 <body>
