--- a/paginas/Beethonven, Mozart e Chopin/mozart.html
+++ b/paginas/Beethonven, Mozart e Chopin/mozart.html
@@ -3,8 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amadeus Mozart</title>
+    <title>MOZART</title>
+    <style>
+        * {
+            list-style: none;
+        }
+
+        body {
+            background-color: #ccc;
+            color: black;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-justify: inter-ideograph;
+        }
+    </style>
 <body>
+    <h1>Wolfgang Amadeus Mozart</h1>
+    <p>Wolfgang Amadeus Mozart foi um dos maiores compositores do Classicismo e da história da música clássica mundial.</p>
     
+
+    <h2>Nascimento e Infância Prodígio:</h2>
+        <ul>
+            <li>Nasceu em Salzburgo, Áustria, em 27 de janeiro de 1756.</li>
+            <li>Desde muito jovem demonstrou um talento musical extraordinário, sendo incentivado por seu pai, Leopold Mozart, que também era compositor.</li>
+            <li>Começou a compor aos cinco anos de idade e já dominava o cravo e o violino.</li>
+            <li>Ainda criança, viajou pela Europa com o pai e a irmã, Nannerl, apresentando-se para a realeza e a nobreza como um menino prodígio.</li>
+        </ul>
+    <h2>Carreira e Vida Adulta:</h2>
+        <ul>
+            <li>Aos 16 anos, foi contratado como músico da corte em Salzburgo, mas insatisfeito, buscou novas oportunidades, sempre compondo.</li>
+            <li>Em 1781, aos 25 anos, demitiu-se do emprego em Salzburgo e se mudou para Viena, onde se casou com Constanze Weber no ano seguinte.</li>
+            <li>Teve seus anos de maior sucesso em Viena, especialmente com suas óperas, como As Bodas de Fígaro e Don Giovanni, e seus concertos para piano.</li>
+            <li>Apesar de ter ganhado bem, tinha dificuldades financeiras devido a gastos excessivos e, em seus últimos anos, sua popularidade na corte vienense declinou.</li>
+        </ul>
+    <h2>Obra e Legado:</h2>
+        <ul>
+            <li>Sua obra é marcada por clareza, equilíbrio e uma grande capacidade de expressar diversas emoções. </li>
+            <li>Compôs mais de 600 obras, incluindo sinfonias (como as famosas Nº 40 e Nº 41), concertos, sonatas, quartetos e óperas.</li>
+            <li>Suas últimas obras incluem as óperas A Flauta Mágica e A Clemência de Tito, além da missa fúnebre inacabada Requiem.</li>
+        </ul>
+    <h2>Morte:</h2>
+        <p>
+            Wolfgang Amadeus Mozart morreu prematuramente em Viena, em 5 de dezembro de 1791, aos 35 anos. 
+            Sua música continua a ser celebrada por sua beleza atemporal e perfeição artística.
+        </p>
 </body>
 </html>
